@@ -33,7 +33,6 @@ enum ipmi_config_argp_option_keys
     IPMI_CONFIG_ARGP_CHECKOUT_KEY = 'o',
     IPMI_CONFIG_ARGP_COMMIT_KEY = 'c',
     IPMI_CONFIG_ARGP_DIFF_KEY = 'd',
-    IPMI_CONFIG_ARGP_FILENAME_KEY_LEGACY = 'f',
     IPMI_CONFIG_ARGP_FILENAME_KEY = 'n',
     IPMI_CONFIG_ARGP_KEYPAIR_KEY = 'e',
     IPMI_CONFIG_ARGP_SECTIONS_KEY = 'S',
